# Year-3-University-Of-Sunderland

./: masters personal statment.odt
Dissertation/: dissertation ideas
Enterprise-SE/Assignment1/: .~lock.Report With Coversheer.odt#  BI54LV A1 Software Eng 2025.odt  Report With Coversheer.odt  plan
Enterprise-SE/Week-1-Intro/: QsForPaperWorkshop.odt  lec notes  lmao.c  whyimin3rdyearwhyamihavingtomakefuckingpowerpointstosummerisestuffivealreadywrittendowninanacademicformat.odp
Enterprise-SE/Week-2-Stories/: Stories.odt
Enterprise-SE/Week-3-Documentation/: afsfsasa.odt
Enterprise-SE/Week-5-UML/: workshop.odt
Enterprise-SE/Week-7-Inheritance/imp/: main.cpp  makefile
Robotics/ Assignment 2/: Declaration quiz.odt
Robotics/ Assignment 2/Code/: Log  Notes  current issues
Robotics/ Assignment 2/Demonstation/: notes
Robotics/ Assignment 2/Report/: Repor.docx  plan  sources.txt
Robotics/Assignment1/: Assignment-1 Declaration quiz Cameron Haynes BI54LV.odt
Robotics/Assignment1/Report/: .~lock.Report.docx#  Report.docx  deez.md.txt
Robotics/Assignment1/robot_pid_project_cameron_haynes/: TORUN.md  envstart.sh  main.py
Robotics/week1ws/: pubsub.sh
Robotics/week1ws/install/: local_setup.sh  setup.sh
Robotics/week1ws/log/: latest_build
Robotics/week1ws/src/install/: setup.sh  (+3 more)
Robotics/week1ws/src/pubsub/: CMakeLists.txt
Robotics/week1ws/src/pubsub/src/: pubnode.cpp  subnode.cpp
Robotics/week2PID/: Notes  lab.ipynb
Robotics/week2PID/PIDenv/: pyvenv.cfg
Robotics/week3 movment systems/: astar-week3-anim.py  astar-week3-noanim.py  rebot-week-3.py  week3-notrbook.ipynb
Robotics/week4/: not working vis2config.rviz
Robotics/week4/Part 1: ros2 package of the week!/turtlesim_node/: CMakeLists.txt  package.xml
Robotics/week4/Part 1: ros2 package of the week!/turtlesim_node/src/: turtle_controller.cpp  turtle_vis.cpp
Robotics/week6-gizmo-sim/: prov_com.sh  run.sh
Robotics/week8/: a_star_planner.py  dwa_planner.py  hybrid_planner.py  main.py
(+45 files in other folders)
